Add Docker deployment support